# r3live_ws

./: .gitignore  r3live_rk3588_install.md
src/map_based_localization/: CMakeLists.txt  README.md  package.xml  使用R3LIVE处理后的点云进行定位.md
src/map_based_localization/config/: localization_3d_rviz.rviz  localization_rviz.rviz
src/map_based_localization/launch/: map_based_localization.launch
src/map_based_localization/src/: map_loader.cpp  pointcloud_matching_localizer.cpp  r3live_map_converter.cpp  scan_matching_localizer.cpp
src/r3live/: setup_r3live.sh
src/r3live/config/: camera_info.yaml
src/r3live/papers/SLAM基础/: 1_SLAM技术深度解析.html  2_IMU预积分与状态传播详解.html  3_因子图优化与ESIKF详解.html  4_slam_math_visualization.html  5_R3LIVE vs DROID-SLAM 核心原理可视化.html  lie_group_demo.html  lie_group_demo_offline.html  矩阵特性通俗讲解.html
src/r3live/papers/SLAM基础/数学与代码/: loam_IMU预积分数学原理与R3LIVE代码对应详解.md
src/r3live/r3live/: CMakeLists.txt
src/r3live/r3live/launch/: r3live_bag.launch  r3live_camera.launch  simple_camera.launch
src/r3live/r3live/src/: r3live_reconstruct_mesh.cpp
src/r3live/r3live/src/meshing/: build_mesh.hpp
src/r3live/r3live/src/meshing/MVS/Common/: Util.cpp
src/r3live/r3live/src/optical_flow/: lkpyramid.cpp
src/r3live/r3live/src/tools/: tools_logger.hpp
src/r3live/scripts/: fix_camera.sh  simple_camera_publisher.py  test_r3live_system.sh
